pod-security-cel/baseline/disallow-proc-mount/disallow-proc-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-proc-mount
  annotations:
    policies.kyverno.io/title: Disallow procMount in CEL expressions
    policies.kyverno.io/category: PSS Baseline (Git Policyset) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kyverno-version: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      The default /proc masks are set up to reduce attack surface and should be required. This policy
      ensures nothing but the default procMount can be specified. Note that in order for users
      to deviate from the `Default` procMount requires setting a feature gate at the API
      server.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-proc-mount
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        cel:
          expressions:
            - expression: >- 
                object.spec.containers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.procMount) ||
                container.securityContext.procMount == 'Default')
              message: >-
                Changing the proc mount from the default is not allowed. The field
                spec.containers[*].securityContext.procMount must be unset or set to `Default`.
      
            - expression: >-
                !has(object.spec.initContainers) ||
                object.spec.initContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.procMount) ||
                container.securityContext.procMount == 'Default')
              message: >-
                Changing the proc mount from the default is not allowed. The field
                spec.initContainers[*].securityContext.procMount must be unset or set to `Default`.
              
            - expression: >- 
                !has(object.spec.ephemeralContainers) ||
                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.procMount) ||
                container.securityContext.procMount == 'Default')
              message: >-
                Changing the proc mount from the default is not allowed. The field
                spec.ephemeralContainers[*].securityContext.procMount must be unset or set to `Default`.
